[project]
name = "references-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.8.1",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiohttp-retry==2.9.1",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.9.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "backoff==2.2.1",
    "beautifulsoup4==4.13.4",
    "cachetools==5.5.2",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "coloredlogs==15.0.1",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cryptography==45.0.4",
    "cycler==0.12.1",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "deprecated==1.2.18",
    "distro==1.9.0",
    "effdet==0.4.1",
    "emoji==2.14.1",
    "executing==2.2.0",
    "filelock==3.18.0",
    "filetype==1.2.0",
    "flatbuffers==25.2.10",
    "fonttools==4.58.4",
    "frozenlist==1.7.0",
    "fsspec==2025.5.1",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "google-cloud-vision==3.10.2",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.3",
    "grpcio==1.73.0",
    "grpcio-status==1.73.0",
    "h11==0.16.0",
    "hf-xet==1.1.5",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "huggingface-hub==0.33.0",
    "humanfriendly==10.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "ipykernel==6.29.5",
    "ipython==9.3.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "joblib==1.5.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kiwisolver==1.4.8",
    "langchain==0.3.26",
    "langchain-community==0.3.26",
    "langchain-core==0.3.66",
    "langchain-openai==0.3.25",
    "langchain-pinecone==0.2.8",
    "langchain-tests==0.3.20",
    "langchain-text-splitters==0.3.8",
    "langchain-unstructured==0.1.6",
    "langdetect==1.0.9",
    "langsmith==0.4.1",
    "lxml==5.4.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.5.0",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "nltk==3.9.1",
    "numpy==2.3.1",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "olefile==0.47",
    "omegaconf==2.3.0",
    "onnx==1.18.0",
    "onnxruntime==1.19.2",
    "openai==1.91.0",
    "opencv-python==4.11.0.86",
    "orjson==3.10.18",
    "packaging==24.2",
    "pandas==2.3.0",
    "parso==0.8.4",
    "pdf2image==1.17.0",
    "pdfminer-six==20250506",
    "pexpect==4.9.0",
    "pi-heif==0.22.0",
    "pikepdf==9.9.0",
    "pillow==11.2.1",
    "pinecone==7.2.0",
    "pinecone-plugin-assistant==1.7.0",
    "pinecone-plugin-interface==0.0.7",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-cpuinfo==9.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycocotools==2.0.10",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "pypdf==5.6.1",
    "pypdfium2==4.30.1",
    "pytesseract==0.3.13",
    "pytest==8.4.1",
    "pytest-asyncio==0.26.0",
    "pytest-benchmark==5.1.0",
    "pytest-codspeed==3.2.0",
    "pytest-recording==0.13.4",
    "pytest-socket==0.7.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-iso639==2025.2.18",
    "python-magic==0.4.27",
    "python-multipart==0.0.20",
    "python-oxmsg==0.0.2",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==27.0.0",
    "rapidfuzz==3.13.0",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "rsa==4.9.1",
    "safetensors==0.5.3",
    "scipy==1.16.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.41",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "syrupy==4.9.1",
    "tenacity==9.1.2",
    "tesseract==0.1.3",
    "tiktoken==0.9.0",
    "timm==1.0.15",
    "tokenizers==0.21.2",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.52.4",
    "triton==3.3.1",
    "typing-extensions==4.14.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "unstructured==0.18.1",
    "unstructured-client==0.37.2",
    "unstructured-inference==1.0.5",
    "unstructured-pytesseract==0.3.15",
    "urllib3==2.5.0",
    "vcrpy==7.0.0",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "wrapt==1.17.2",
    "yarl==1.20.1",
    "zstandard==0.23.0",
]
